--- a/Anotações/Partições/1. Fundamentos.md
+++ b/Anotações/Partições/1. Fundamentos.md
@@ -1,7 +1,7 @@
-
 # 1. O que é uma partição ?
 
 Uma partição é uma divisão lógica de um disco físico.
+
 ## Analogia:
 
 Pense no disco como um terreno grande (ex: /dev/sda).
@@ -35,6 +35,28 @@ O layout de partições é definido por uma tabela de partição, e existem dois
 
 > Hoje em dia o padrão é o GPT, especialmente em sistemas UEFI.
 
+Só aqui já é possivel identificar que o tipo de tabela de partição é o `GPT`
+
+```shell
+╭─bazukart@debian /home/bazukart/Documentos/GitHub/Bash-Linux-Debian  ‹system›  <master>    
+╰─$ lsblk  
+NAME        MAJ:MIN RM   SIZE RO TYPE MOUNTPOINTS  
+loop0         7:0    0  50,9M  1 loop /snap/snapd/25577  
+loop1         7:1    0 128,9M  1 loop /snap/obsidian/50  
+loop2         7:2    0  50,8M  1 loop /snap/snapd/25202  
+loop3         7:3    0 129,7M  1 loop /snap/obsidian/49  
+loop4         7:4    0  63,8M  1 loop /snap/core20/2599  
+loop5         7:5    0  63,8M  1 loop /snap/core20/2669  
+nvme0n1     259:0    0 476,9G  0 disk    
+├─nvme0n1p1 259:1    0   260M  0 part    
+├─nvme0n1p2 259:2    0    16M  0 part    
+├─nvme0n1p3 259:3    0 150,5G  0 part    
+├─nvme0n1p4 259:4    0   952M  0 part    
+├─nvme0n1p5 259:5    0   260M  0 part    
+├─nvme0n1p6 259:6    0   976M  0 part /boot/efi  
+├─nvme0n1p7 259:7    0 308,6G  0 part /  
+└─nvme0n1p8 259:8    0  15,4G  0 part [SWAP]
+```
 # 4. Ferramentas para ver partições
 
 Mostra discos e partições em forma de árvore:
@@ -61,13 +83,12 @@ Mostra onde cada partição está montada no sistema
 mount | column -t
 ```
 
-# 5. Ferramentas principais
+# 5. Como o Linux monta as partições
 
-O Linux tem várias ferramentas para gerenciar partições, mas as duas mais usadas são:
+O Linux “liga” uma partição a um **ponto de montagem** (um diretório).  
+Exemplo:
 
-| Ferramenta | Interface                           | Indicação                     |
-| ---------- | ----------------------------------- | ----------------------------- |
-| `fdisk`    | Modo texto interativo               | Discos MBR ou GPT simples     |
-| `parted`   | Mais moderna, suporta GPT e scripts | Discos grandes ou setups UEFI |
+- `/dev/sda1` montada em `/`
+- `/dev/sda2` montada em `/home`
 
-> O `fdisk` é ótimo para aprender, porque ele mostra todo o processo manualmente.
+Isso é configurado no arquivo `/etc/fstab`.
